# pico-mini

./: .gitignore  CLAUDE.md  README.md  agent.py  setup.sh
mlx/: mlx_engine.py  model_registry.py  test_model_registry.py  test_streaming.py
research/: README.md  experiment.py  harness.py  harness_llama.py  kv_lab.py  lean_prompts.py  planner.py  program.md  techniques.py
research/1bit-fallback/: create_ternary_downproj_buffer.py
research/Corsair/: CLAUDE.md  DISTRIBUTED_RESULTS.md  README.md  RELATED_WORK.md  SAIL_PAPER_RELEVANCE.md  corsair_pitch_data.csv  results_verified.csv  sram_projections.csv
research/distributed/: README.md  expert_client.py  expert_worker.py  split_for_distributed.py  test_distributed.py
research/expert-sniper/: CLAUDE.md  README.md  RESEARCH.md  agent.py  demo.py  expert_io.py  interactive_demo.py  sniper.py  test_search.py  test_vision.py
research/expert-sniper/distributed/: README.md  pyproject.toml  setup.py  split_gemma4.py
research/expert-sniper/distributed/mac_tensor/: __init__.py  __main__.py  cli.py  server.py  vision_engine.py
research/expert-sniper/distributed/web/mac-tensor-chat/src/app/: globals.css
research/expert-sniper/distributed/web/mac-tensor-chat/src/app/chat/: page.tsx
research/flash-streaming/: diagnose_full.py  flash_stream_27b.py  runpod_setup.sh  sniper_122b.py  split_122b.py  split_dense_27b.py
research/gemma/: README.md
research/gemma/mlx-gemma4/: README.md  pyproject.toml  setup.cfg
research/gemma/mlx-gemma4/src/mlx_gemma4/: __init__.py  cli.py  generate.py  model.py
research/tiny-bit-terminal/: .gitignore  (+2 more)
web/: index.html  server.py
(+33 files in other folders)
