[metadata]
name = mlx-gemma4
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    mlx>=0.22.0
    mlx-lm>=0.22.0
    transformers>=4.40.0
    numpy
    huggingface-hub

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlx-gemma4 = mlx_gemma4.cli:main
